syntax = "proto3";

option java_package = "com.peopleofandroido.chillaxingcat";
option java_multiple_files = true;

// 생성/수정시 https://developers.google.com/protocol-buffers/docs/proto3?hl=ko 참고
message TodayData {
  // local notification enabled value
  string today_date = 1;
  string today_status = 2;
  string today_history = 3;
}